samples/_failures_safe/1761402446_bf96c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31367cf2.c: In function ‘main’:
./samples/SAFE/__tmp_31367cf2.c:143:5: error: expected identifier or ‘(’ at end of input
  143 |     int
      |     ^~~
./samples/SAFE/__tmp_31367cf2.c:143:5: error: expected declaration or statement at end of input
